--- a/findEmoHate.html
+++ b/findEmoHate.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜找尋我的情緒｜分類探索｜討厭</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-20a89196.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-c8573f8c.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-51978f11.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-2e6fed70.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -51,7 +51,7 @@
                 <h2>討厭</h2>
                 <div class="nav-btn d-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">返回</a>
-                    <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="AddedEmoCards.html">
+                    <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
                         <i class="bi bi-folder2"></i>
                         <i class="bi bi-folder2-open"></i>
                         <span class="ms-4">我的情緒卡夾</span>
