--- a/signup.html
+++ b/signup.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜註冊</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-20a89196.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-c8573f8c.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-51978f11.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-2e6fed70.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -36,7 +36,7 @@
                 <div class="mb-20 text-pink d-flex flex-column align-items-center">
                     <i class="bi bi-person-circle profile"></i>
                 </div>
-                <h2 class="mb-32">註冊</h2>
+                <h2 class="mb-32 text-pink">註冊</h2>
                 <!-- 尚未填入 a 連結 -->
                 <a class="w-100 mb-32 py-8 btn btn-outline-pink c-btn-outline-pink d-flex justify-content-center align-items-center" href="#">
                     連結 Google 帳號
@@ -115,7 +115,7 @@
                     <button class="w-100 mb-32 py-8 btn btn-pink c-btn" type="submit">登入</button>
                 </form>
                 <a class="d-block 
-                click-me clickMeToLogin" href="signup.html">已經有帳號的嗎？ 點我登入</a>
+                click-me clickMeToLogin" href="signup.html">已經有帳號了嗎？ 點我登入</a>
             </div>
         </div>
     </div>
