--- a/pages/myRecords.html
+++ b/pages/myRecords.html
@@ -51,7 +51,8 @@
               <th scope="col"></th>
               <th scope="col">日期</th>
               <th scope="col">情緒與強度</th>
-              <th scope="col">情緒故事</th>
+              <th scope="col">分享次數</th>
+              <th scope="col">情緒故事與分享</th>
             </tr>
           </thead>
           <tbody>
@@ -61,6 +62,7 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
+              <td>2次</td>
               <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
             <tr class="text-center table-main-tint03">
@@ -69,6 +71,7 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
+              <td>0次</td>
               <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
             <tr class="text-center">
@@ -77,6 +80,7 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
+              <td>0次</td>
               <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
             <tr class="text-center table-main-tint03">
@@ -85,6 +89,7 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
+              <td>0次</td>
               <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
           </tbody>
