--- a/pages/login.html
+++ b/pages/login.html
@@ -24,11 +24,11 @@
                     </div>
                     <h2 class="mb-32">登入</h2>
                     <!-- 尚未填入 a 連結 -->
-                    <a class="w-100 mb-32 py-8 btn btn-outline-main c-btn-outline-main d-flex justify-content-center align-items-center" href="#">
+                    <!-- <a class="w-100 mb-32 py-8 btn btn-outline-main c-btn-outline-main d-flex justify-content-center align-items-center" href="#">
                         透過 Google 帳號登入
                         <i class="bi bi-google ms-8"></i>
                     </a>
-                    <div class="or mb-32">或</div>
+                    <div class="or mb-32">或</div> -->
     
                     <!-- 尚未填入 action 內容 -->
                     <form action="#" method="post" class="needs-validation" novalidate>
@@ -42,7 +42,7 @@
                                 請輸入正確的 e-mail 帳號
                             </div>
                         </div>
-                        <div class="mb-20">
+                        <div class="mb-32">
                             <label for="singupPassword" class="form-label d-flex justify-content-between">
                                 密碼
                                 <span class="must">*必填</span>
