--- a/accountModify.html
+++ b/accountModify.html
@@ -7,8 +7,8 @@
         <title>浪潮情緒卡｜我的帳戶</title>
         <!-- Bootstrap icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-      <script type="module" crossorigin src="/wavemocards/assets/main-0ca79656.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-80634b30.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-13fc12c4.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-7c4398d6.css">
     </head>
     <body>
         <header class="header h-logined fixed-top">
@@ -111,14 +111,12 @@
         </main>
 
         <!-- 浮動按鈕 -->
-<div class="fixed-bottom">
-    <div class="me-8 mb-12 d-flex justify-content-end">
-        <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
-        style="width: 60px; height: 60px;">
-                <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
-                <span class="text-white fs-10 fw-bold">TOP</span>
-        </a>
-    </div>
+<div class="me-12 mb-12" style="width: 60px; position: fixed; right: 0; bottom: 0; z-index: 1030;">
+    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
+    style="width: 60px; height: 60px;">
+            <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
+            <span class="text-white fs-10 fw-bold">TOP</span>
+    </a>
 </div>        
         <footer class="footer py-48">
     <div class="container">
