--- a/addEmoCard.html
+++ b/addEmoCard.html
@@ -7,8 +7,9 @@
     <title>浪潮情緒卡｜新增情緒卡</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-0ca79656.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-80634b30.css">
+    <script src="/assets/js/pages/addEmoCard.js" defer></script>
+    <script type="module" crossorigin src="/wavemocards/assets/main-13fc12c4.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-7c4398d6.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -60,36 +61,40 @@
                     <!-- 上傳圖片 -->
                     <div class="w-100 d-flex justify-content-center align-items-end">
                         <div class="mb-16 addImg">
-                            <img class="w-100 h-100 rounded-circle" src="" alt="">
-                            <i class="bi bi-plus-circle-fill btn-add"></i>
+                            <img class="w-100 h-100 rounded-circle" src="" alt="" id="emoImage">
+                            <i class="bi bi-plus-circle-fill btn-add" id="forAddEmoImage"></i>
+                            <input type="file" class="d-none" accept="image/*" id="addEmoImage">
                         </div>
                     </div>
                     <!-- 情緒詞彙 -->
-                    <div class="mb-16">
-                        <label for="addEmoName" class="form-label  d-flex justify-content-between">
+                    <div class="mb-16 position-relative">
+                        <label for="addEmoName" class="form-label d-flex justify-content-between">
                             情緒詞彙
                             <span class="must">*必填</span>
                         </label>
                         <input type="text" class="form-control px-20 rounded-pill" id="addEmoName" placeholder="開心" required>
-                        <div class="invalid-feedback">
+                        <div class="invalid-tooltip bg-transparent text-pink-dark mt-0 pt-0">
                             請輸入情緒詞彙，且該詞彙為非重複的情緒詞彙
                         </div>
+                        <div class="position-absolute end-0 | limitation__name"><span>0</span>/5</div>
                     </div>
                     <!-- 意思 -->
-                    <div class="mb-16">
+                    <div class="mb-16 position-relative">
                         <label for="addEmoDefinition" class="form-label  d-flex justify-content-between">
                             意思
                             <!-- <span class="must">*必填</span> -->
                         </label>
                         <input type="text" class="form-control px-20 rounded-pill" id="addEmoDefinition" placeholder="感到快樂、愉悅，內心充滿愉快。">
+                        <div class="position-absolute end-0 | limitation__definition"><span>0</span>/30</div>
                     </div>
                     <!-- 例句 -->
-                    <div class="mb-16">
+                    <div class="mb-16 position-relative">
                         <label for="addEmoExample" class="form-label d-flex justify-content-between">
                             例句
                             <!-- <span class="must">*必填</span> -->
                         </label>
                         <input type="text" class="form-control px-20 rounded-pill" id="addEmoExample" placeholder="和朋友一起玩遊戲，我覺得很開心。">
+                        <div class="position-absolute end-0 | limitation__example"><span>0</span>/30</div>
                     </div>
                     <!-- 分類 -->
                     <div class="mb-32">
@@ -117,14 +122,12 @@
     </main>
     
     <!-- 浮動按鈕 -->
-<div class="fixed-bottom">
-    <div class="me-8 mb-12 d-flex justify-content-end">
-        <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
-        style="width: 60px; height: 60px;">
-                <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
-                <span class="text-white fs-10 fw-bold">TOP</span>
-        </a>
-    </div>
+<div class="me-12 mb-12" style="width: 60px; position: fixed; right: 0; bottom: 0; z-index: 1030;">
+    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
+    style="width: 60px; height: 60px;">
+            <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
+            <span class="text-white fs-10 fw-bold">TOP</span>
+    </a>
 </div>    
     <footer class="footer py-48">
     <div class="container">
