--- a/emoCardsHate.html
+++ b/emoCardsHate.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-809c6d56.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-2db09638.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-823ab5e2.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-e8616e05.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -274,17 +274,22 @@
                   </div>
                 </button>`;
               let contentModals = `
-                <li>
-                  <div class="modal fade px-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <li>
+                  <div class="modal fade px-40 px-md-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
-                      <div class="modal-content bg-${emo}" id="cardBgColor">
-                        <div class="modal-body d-flex justify-content-between align-items-center">
-                          <div class="text">
-                            <div class="title w-100 mb-20 d-flex justify-content-between  align-items-end">
+                      <div class="modal-content bg-${emo}">
+                        <div class="modal-body d-sm-flex justify-content-between align-items-center">
+                          <div class="box-bigCard-text">
+                            <div class="d-flex d-md-none w-100 justify-content-center">
+                              <div class="d-sm-none box-bigCard-img mb-8">
+                                <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+                              </div>
+                            </div>
+                            <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
                               <h2>${data.Name}</h2>
-                              <a href="modifyEmoCard.html" role="button">
+                              <!-- <a href="modifyEmoCard.html" role="button">
                                   <i class="bi bi-pencil-square"></i>
-                              </a>
+                              </a> -->
                             </div>
                             <div class="mb-16">
                               <h3 class="mb-4">意思：</h3>
@@ -295,7 +300,7 @@
                               <p>${data.Example}</p>
                             </div>
                           </div>
-                          <div class="img">
+                          <div class="d-none d-sm-block box-bigCard-img">
                             <img class="w-100" src="${imgSrc}" alt="${data.Name}">
                           </div>
                         </div>
